--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["airbnb", "airbnb-typescript", "next/core-web-vitals"],
+  "parserOptions": { "project": "./tsconfig.json" },
+  "rules": {
+    "no-unused-vars": "warn"
+  }
 }
